--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "processColors": "node ./lib/processColors.js"
   },
   "author": "",
   "license": "MIT",
@@ -16,6 +17,7 @@
     "node-find-files": "0.0.4",
     "postcss-cli": "^2.3.2",
     "postcss-responsive-type": "^0.3.2",
+    "recursive-readdir": "^1.3.0",
     "toml": "^2.3.0"
   }
 }
